# SyntheticCoin-SYNC

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  PIVOT_RATIONALE.md  QUICKSTART.md  README.md  START_MINING.md  build-blockchain.sh  build.sh  create-github-issues.sh  create-new-issues.sh  github-issues.md  plan-v1-ai-focused.md  plan-v2.md  setup-repo.sh  simple-wallet.py  sync-demo  sync-stratum-server.py
src/: sync-cli.cpp  sync-demo.cpp  syncd.cpp
src/consensus/: params.h
src/mining/: reward_calculator.cpp  reward_calculator.h
sync-blockchain/: CMakeLists.txt
sync-blockchain/src/: sync-main.cpp  sync-simple.cpp
sync-blockchain/src/podd/: device_verifier.cpp  device_verifier.h
sync-blockchain/src/sync-consensus/: params.h
